<resources>
    <string name="app_name">Hi-Learn</string>
    <string name="facebook_application_id">321957875689882</string>
    <string name="fb_login_protocol_scheme">fb321957875689882</string>
    <string name="discussion">Discussion Room</string>
    <string name="sweet_sixteen">SWEET SIXTEEN</string>
    <string name="comprehension2016">Comprehension From JAMB 2016</string>
    <string name="comprehension2017">Comprehension From JAMB 2017</string>
    <string name="comprehension2018">Comprehension From JAMB 2018</string>
    <string name="comprehension">Comprehension</string>
    <string name="read_comprehension">Read Comprehension</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">nnadihenry92@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">DashBoard</string>
    <string name="menu_share">Share</string>
    <string name="rem">rem</string>
    <string name="str_video_error">video not loaded.please check network..</string>
    <string name="coins_error">coins not available</string>
    <string name="jamb" translatable="false">JAMB</string>
    <string name="maths" translatable="false">Maths</string>
    <string name="biology">Biology</string>
    <string name="civiceducation">Civic Education</string>
    <string name="chemistry">Chemistry</string>
    <string name="lit">Lit in English</string>
    <string name="physics">Physics</string>
    <string name="agric">Agricultural Science</string>
    <string name="account">Accountancy</string>
    <string name="geography">Geography</string>
    <string name="economics">Economics</string>
    <string name="crk">CRK</string>
    <string name="irk">IRK</string>
    <string name="government">Government</string>
    <string name="commerce">Commerce</string>
    <string name="history">History</string>
    <string name="jnovels">JAMB novels</string>
    <string name="set">Set</string>
    <string name="str_question">Question</string>
    <string name="please_wait">Please wait..</string>
    <string name="coins">Coins :</string>
    <string name="view_answer">Review Answer</string>
    <string name="view_answer_coin">Use 10 coins</string>
    <string name="show_video">Watch Video ads</string>
    <string name="answer">Answer</string>
    <string name="your_answer">Your answer</string>
    <string name="quiz">quiz</string>
    <string name="total_set">Past Years</string>
    <string name="total_question">Questions</string>
    <string name="ex">practice with over 250,000 past questions</string>
    <string name="score">Score:</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="best_score">Best Score:</string>
    <string name="no">No.</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="send_email">Send Email</string>
    <string name="share_link">Share Link!</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="daily_test">Daily Test</string>
    <string name="take_test">Take test</string>
    <string name="test_done">Test Done !!</string>
    <string name="done">Done</string>
    <string name="level_complete">Complete</string>
    <string name="level">Level</string>
    <string name="repeat">Repeat</string>
    <string name="days">Sun,Mon,Tue,Wed,Thu,Fri,Sat</string>
    <string name="reminder">Reminder</string>
    <string name="mathry_reminder">Mathry Reminder</string>
    <string name="page">Page</string>
    <string name="pdf_generate">Pdf Generated</string>
    <string name="no_data">No Data</string>
    <string name="show_worksheet">Show Worksheet</string>
    <string name="test_already_done">Test already done !</string>
    <string name="clear_previous_level">clear previous level..</string>
    <string name="sound">Sound</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="way_of_learning">Way of Learning</string>
    <string name="no_app_found">No  application found which can open the file</string>
    <string name="delete_file">Delete file</string>
    <string name="select_all">Select all</string>
    <string name="empty_feedback">Please Enter your Feedback</string>
    <string name="feedback_hint">Tell us where we can improve?</string>
    <string name="rate_msg">if you enjoy using app \n would you mind ratting us,then…?</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="rating_error">Please select rate</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="communicate">Communicate</string>
    <string name="agric_1" translatable="false">Start Agricultural Science JAMB practice</string>
    <string name="phy_1" translatable="false">Start Physics JAMB practice</string>
    <string name="crk_1" translatable="false">Start CRK JAMB practice</string>
    <string name="irk_1" translatable="false">Start IRK JAMB practice</string>
    <string name="gov_1" translatable="false">Start Government JAMB practice</string>
    <string name="geo_1" translatable="false">Start Geography JAMB practice</string>
    <string name="his_1" translatable="false">Start History JAMB Practice</string>
    <string name="civic_1" translatable="false">Start Civic Education JAMB practice</string>
    <string name="acc_1" translatable="false">Start Accounting JAMB practice</string>
    <string name="com_1" translatable="false">Start Commerce JAMB practice</string>
    <string name="eco_1" translatable="false">Start Economics JAMB practice</string>
    <string name="lit_1" translatable="false">Start Literature JAMB practice</string>
    <string name="maths_1" translatable="false">Start Mathematics JAMB Practice</string>
    <string name="english_1" translatable="false">Start English JAMB practice</string>
    <string name="chemistry_1" translatable="false">Start chemistry JAMB practice</string>
    <string name="bio_1" translatable="false">Start Biology JAMB practice</string>
    <string name="_0" translatable="false">0</string>
    <string name="slash" translatable="false">/</string>
    <string name="single_space" translatable="false">\u0020</string>
    <string name="str_space" translatable="false">\u0020\u0020</string>
    <string name="economics_set" translatable="false">economics_set</string>
    <string name="economics_data_table" translatable="false">economicsData</string>
    <string name="maths_set" translatable="false">maths_set</string>
    <string name="maths_data_table" translatable="false">mathsData</string>
    <string name="english_data_table" translatable="false">englishData</string>
    <string name="english_set" translatable="false">english_set</string>
    <string name="agric_data_table" translatable="false">agricData</string>
    <string name="agric_set" translatable="false">agric_set</string>
    <string name="biology_data_table" translatable="false">biologyData</string>
    <string name="biology_set" translatable="false">biology_set</string>
    <string name="chemistry_set" translatable="false">chemistry_set</string>
    <string name="chemistry_data_table" translatable="false">chemistryData</string>
    <string name="physics_set" translatable="false">physics_set</string>
    <string name="physics_data_table" translatable="false">physicsData</string>
    <string name="crk_set" translatable="false">crk_set</string>
    <string name="crk_data_table" translatable="false">crkData</string>
    <string name="irk_set" translatable="false">irk_set</string>
    <string name="irk_data_table" translatable="false">irkData</string>
    <string name="geography_set" translatable="false">geography_set</string>
    <string name="geography_data_table" translatable="false">geographyData</string>
    <string name="government_set" translatable="false">government_set</string>
    <string name="government_data_table" translatable="false">governmentData</string>
    <string name="history_set" translatable="false">history_set</string>
    <string name="history_data_table" translatable="false">historyData</string>
    <string name="civic_set" translatable="false">civic_set</string>
    <string name="civic_data_table" translatable="false">civicData</string>
    <string name="account_set" translatable="false">account_set</string>
    <string name="account_data_table" translatable="false">accountData</string>
    <string name="commerce_set" translatable="false">commerce_set</string>
    <string name="commerce_data_table" translatable="false">commerceData</string>
    <string name="literature_set" translatable="false">literature_set</string>
    <string name="literature_data_table" translatable="false">literatureData</string>
    <string name="str_maths" translatable="false">Mathematics</string>
    <string name="str_english" translatable="false">English Language</string>
    <string name="str_biology" translatable="false">Biology</string>
    <string name="str_agric" translatable="false">Agricultural Science</string>
    <string name="str_chemistry" translatable="false">Chemistry</string>
    <string name="str_physics" translatable="false">Physics</string>
    <string name="str_crk" translatable="false">CRK</string>
    <string name="str_irk" translatable="false">IRK</string>
    <string name="str_government" translatable="false">Government</string>
    <string name="str_geography" translatable="false">Geography</string>
    <string name="str_civic" translatable="false">Civic Education</string>
    <string name="str_history" translatable="false">History</string>
    <string name="str_account" translatable="false">Account</string>
    <string name="str_commerce" translatable="false">Commerce</string>
    <string name="str_economics" translatable="false">Economics</string>
    <string name="str_literature" translatable="false">Literature in English</string>
    <string name="authentication_sign_in_google">Sign in with Google</string>
    <string name="app_tagline">More than just a CBT </string>
    <string name="answer_2_format" translatable="false">%.2f</string>
    <string name="square_format" translatable="false">&lt;sup&gt;2&lt;/sup&gt;</string>
    <string name="cube_format" translatable="false">&lt;sup&gt;3&lt;/sup&gt;</string>
    <string name="str_true" translatable="false">true</string>
    <string name="str_dot" translatable="false">.</string>
    <string name="easy" translatable="false">Easy</string>
    <string name="medium" translatable="false">Medium</string>
    <string name="hard" translatable="false">Hard</string>
    <string name="ADS_VISIBILITY" translatable="false">YES</string>
    <string name="app_id" translatable="false">ca-app-pub-5039012764874679~9632103045</string>
    <string name="banner_ads" translatable="false">ca-app-pub-5039012764874679/6910678730</string>
    <string name="admob_interstitial_id" translatable="false">ca-app-pub-5039012764874679/7459624440</string>
    <string name="video_reward_ads" translatable="false">ca-app-pub-5039012764874679/2917810445</string>
    <string name="rate_api" translatable="false">market://details?id=</string>
    <string name="SHARE_APP_LINK" translatable="false">"https://play.google.com/store/apps/details?id=&quot;</string>
    <string name="space" translatable="false">\u0020</string>
    <string name="date_format" translatable="false">yyyy-MM-dd</string>
    <string name="default_reminder_text" translatable="false">09:00 PM</string>
    <string name="feedback_mail" translatable="false">nnadihenry92@gmail.com</string>
    <string name="english" translatable="false">English</string>
    <string name="spanish" translatable="false">Spanish</string>
</resources>