<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:icon="@drawable/ic_homepage"
            android:title="@string/menu_home" />





        <item
            android:id="@+id/nav_discus"
            android:icon="@drawable/chat"
            android:title="@string/discussion" />
        <item
            android:id="@+id/nav_novels"
            android:icon="@drawable/ic_daily_test"
            android:title="@string/jnovels" />



        <item
            android:id="@+id/nav_sound"
            android:icon="@drawable/ic_volume_up_black_24dp"
            android:title="@string/sound"
            app:actionLayout="@layout/layout_switch" />

        <item
            android:id="@+id/nav_coin"
            android:icon="@drawable/ic_drawer_coin"
            android:title="@string/coins" />
        <item
                            android:id="@+id/nav_join"
            android:icon="@drawable/community1"
                            android:title="Join Community" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Log Out" />




    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:icon="@drawable/policy"
                android:title="@string/privacy_policy"
                android:visible="true" />



            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />


            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_like"
                android:title="@string/rate_us"
                android:visible="true" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback"
                android:visible="true" />

        </menu>
    </item>

</menu>
