<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@mipmap/ic_launcher" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_size_xxl"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvAppTagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppTagline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_tagline"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />



<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:padding="40dp"
    app:layout_constraintTop_toBottomOf="@+id/tvAppTagline"
    android:orientation="vertical">

    <Button

        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:padding="0dp"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/authentication_sign_in_google"
        android:drawableStart="@drawable/googleg_standard_color_18"

    />
    <Button
        android:id="@+id/buttonPhoneAuth"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/phone"
        android:text="Sign in with Phone "
        android:textAllCaps="false"
        android:padding="0dp"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"

        />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" />
    <!--    <Button-->
<!--        android:id="@+id/emailsignin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="10dp"-->
<!--        android:background="@drawable/button"-->
<!--        android:drawableStart="@drawable/fui_ic_mail_white_24dp"-->
<!--        android:text="Sign in with Phone "-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/buttonPhoneAuth"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        />-->
</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>